# mesh-core

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: config.toml
mesh-core-bare-metal/: Cargo.toml  memory.x
mesh-core-bare-metal/.cargo/: config.toml
mesh-core-bare-metal/examples/: hello.rs
mesh-core-bare-metal/src/: lib.rs  main.rs  peripheral.rs  singleton.rs
mesh-core-no-std/: Cargo.toml
mesh-core-no-std/tests/: integration.rs
mesh-core-std/: Cargo.toml  build.rs
mesh-core-std/config/: log_config.yml
mesh-core-std/src/: main.rs  utils.rs
mesh-core-std/src/bluetooth/: ble.rs
mesh-core-std/src/examples/: connection.rs  udpsocket.rs
mesh-core-std/src/link/: discovery.rs  mod.rs  multilink.rs
mesh-core-std/src/types/: mod.rs  peer.rs  routing.rs
mesh-core-std/src/wifi/: mod.rs  wifi_impl.rs
mesh-core-std/tests/: duplication.rs  multinodes.rs  routing.rs
proto/: mesh.proto
src/: ble.rs  configure.rs  connection.rs  discovery.rs  lib.rs  link.rs  main.rs  udpsocket.rs  utils.rs  wifi.rs
src/link/: mod.rs
src/types/: args.rs  ble_types.rs  mod.rs  peer.rs  routing.rs  wifi_quic.rs
src/wifi/: configure.rs
tests/: discovery.rs  multinodes.rs
