[package]
authors = ["sabinonweb"]
edition = "2021"
name = "mesh-core-bare-metal" 
version = "0.1.0"

[[bin]]
name = "mesh-core-bare-metal" 
test = false
bench = false

[dependencies]
cortex-m-rt = "0.7"
cortex-m = "0.7"      
panic-halt = "0.2"
cortex-m-semihosting = "0.5.0"
volatile-register = "0.2.2"

[package.metadata.cargo-xbuild]
memory = "memory.x"


