[package]
name = "mesh-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log4rs = "1.2.0"
log = "0.4.20"
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
clap = { version = "4.5.47", features = ["derive"] }
async-trait = "0.1.89"
quinn = "0.11.9"
rcgen = "0.14.4"
prost = "0.14"
prost-types = "0.14"
time = "0.3.43"
socket2 = "0.6.0"
env_logger = "0.11.8"
btleplug = "0.11.8"
uuid = "1.18.1"
tokio-stream = "0.1.17"
objc = "0.2.7"
objc-foundation = "0.1.1"

[build-dependencies]
prost-build = "0.12"

